--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -64,6 +64,7 @@
         <div class="col-lg-9">
           <div class="p-5 bg-white">
               <!-- <h2>{{ .Title }}</h2> -->
+              {{if gt (len .Data.Pages) 1}}
               <div class="bg-gray p-4">
                   <h3 class="mt-0">{{ .Title }}:</h3>
                   <ul class="list-unstyled">
@@ -72,6 +73,7 @@
                     {{ end }}
                   </ul>
               </div>
+              {{ end }}
               <div class="bg-white p-4">
                 {{ .Content }}
               </div>
