re-display all entries when search is cleared

--- a/layouts/resources/list.html
+++ b/layouts/resources/list.html
@@ -22,6 +22,12 @@
                     },
                   {{ end }}
                 ];
+                $( "#search" ).on('keyup',function () {
+                  var value = $(this).val();
+                  if(!value) {
+                    $.each($('[id^=go_]'),function (i,val) { val.style.display='block' })
+                  }
+                })
                 $( "#search" ).autocomplete({
                     minLength: 0,
                     source: projects,
