--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,8 @@
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  
+  {{ template "_internal/google_analytics.html" . }}
+
   {{ "<!-- ** Plugins Needed for the Project ** -->" | safeHTML }}
   {{ "<!-- Bootstrap -->" | safeHTML }}
   <link rel="stylesheet" href="{{ .Site.BaseURL }}plugins/bootstrap/bootstrap.min.css">
@@ -18,6 +19,7 @@
   {{ "<!-- fonts -->" | safeHTML }}
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 
+
   <style>
   :root{
     --primary-color:{{ .Site.Params.primaryColor }};
@@ -25,7 +27,7 @@
     --text-color:{{ .Site.Params.textColor }};
     --text-color-dark:{{ .Site.Params.textColorDark }};
     --white-color:{{ .Site.Params.whiteColor }};
-  }  
+  }
   </style>
 
   {{ "<!-- Main Stylesheet -->" | safeHTML }}
