Add debug output

--- a/layouts/community/maintainers.html
+++ b/layouts/community/maintainers.html
@@ -11,6 +11,11 @@
 <!-- details page -->
 <section class="single pt-5 bg-gray">
   <div class="container">
+      {{ printf ".Site.Language.Lang: %#v" .Site.Language.Lang }}
+      <br />
+      {{ printf ".Page.Section: %#v" .Page.Section }}
+      <br />
+      {{ printf ".Page.Layout: %#v" .Page.Layout }}
     <div class="row">
       <div class="col-lg-3">
         <div class="p-4 bg-white sticky-top top-100">
@@ -55,8 +60,7 @@
             <h2>{{ .Title }}</h2>
             {{ .Content }}
             {{ range sort $.Site.Data.maintainers "accountName" }}
-              {{ $urlPre := "https://api.github.com" }}
-              {{ $gitHubUser := getJSON $urlPre "/users/" .accountName }}
+              {{ $gitHubUser := getJSON "https://api.github.com/users/" .accountName }}
               <p style="padding-bottom: 12px">
                 <hr />
                 <a href="https://github.com/{{ .accountName }}" target="_blank">
