adding origin story to be reviewed

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -64,7 +64,7 @@
         <div class="col-lg-9">
           <div class="p-5 bg-white">
               <!-- <h2>{{ .Title }}</h2> -->
-              {{if gt (len .Data.Pages) 1}}
+              {{if ge (len .Data.Pages) 1}}
               <div class="bg-gray p-4">
                   <h3 class="mt-0">{{ .Title }}:</h3>
                   <ul class="list-unstyled">
