making container fluid to fix #53

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -47,7 +47,7 @@
 
   {{ "<!-- details page -->" | safeHTML }}
   <section class="single section bg-gray pb-0">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-lg-3">
           <div class="mb-5 bg-white p-4 sticky-top">
