--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
 
 <!-- details page -->
 <section class="single pt-5 bg-gray">
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <div class="col-lg-3">
         <div class="p-4 bg-white sticky-top top-100">
