--- a/layouts/resources/list.html
+++ b/layouts/resources/list.html
@@ -99,7 +99,7 @@
                   </div>
                   <div style="padding:10px">
                       Last Updated on DSC Community:
-                      <span class="badge badge-secondary">{{ .AdditionalMetadata.lastUpdated | dateFormat "2006-01-01" }}</span>
+                      <span class="badge badge-secondary">{{ .AdditionalMetadata.updated | dateFormat "2006-01-01" }}</span>
                       <br />
                   </div>
                   <a class="btn btn-primary btn-sm rounded p-2 m-2 btn-github" href="{{ .ProjectUri }}" target="_blank" role="button"><i class="fab fa-github-square"></i>Open Project</a>
