--- a/layouts/resources/list.html
+++ b/layouts/resources/list.html
@@ -76,10 +76,8 @@
           <div id="accordion">
             {{ range $data.resources }}
             {{ "<!-- accordion item -->" | safeHTML }}
-            {{
-              $resource = newScratch
-              $resource.Set "ProjectUri" .ProjectUri
-            }}
+            {{ $resource = newScratch }}
+            {{ $resource.Set "ProjectUri" .ProjectUri }}
             <div  id="go_{{ .Name }}" class="card mb-4 rounded-0 shadow border-0">
               <div class="card-header rounded-0 bg-white border p-0 border-0">
                 <a class="card-link h4 d-flex tex-dark mb-0 py-3 px-4 justify-content-between" data-toggle="collapse" href="#{{ .Name }}" >
