trying different scratch

--- a/layouts/resources/list.html
+++ b/layouts/resources/list.html
@@ -76,8 +76,7 @@
           <div id="accordion">
             {{ range $data.resources }}
             {{ "<!-- accordion item -->" | safeHTML }}
-            {{ $resource = newScratch }}
-            {{ $resource.Set "ProjectUri" .ProjectUri }}
+            {{ .Scratch.Set "ProjectUri" .ProjectUri }}
             <div  id="go_{{ .Name }}" class="card mb-4 rounded-0 shadow border-0">
               <div class="card-header rounded-0 bg-white border p-0 border-0">
                 <a class="card-link h4 d-flex tex-dark mb-0 py-3 px-4 justify-content-between" data-toggle="collapse" href="#{{ .Name }}" >
@@ -111,7 +110,7 @@
                   <div style="padding:10px">
                     <strong>Tags:</strong>
                     {{ range (split .AdditionalMetadata.tags " ") }}
-                    <span class="badge badge-pill badge-info"><a href="{{$resource.Get "ProjectUri"}}/blob/HEAD/source/Examples/Resources/{{ . }}">{{ . }}</a></span>
+                    <span class="badge badge-pill badge-info"><a href="{{.Scratch.Get "ProjectUri"}}/blob/HEAD/source/Examples/Resources/{{ . }}">{{ . }}</a></span>
                     {{ end }}
                   </div>
                 </div>
