updating text for last data fetched

--- a/layouts/resources/list.html
+++ b/layouts/resources/list.html
@@ -98,7 +98,7 @@
                     <br />
                   </div>
                   <div style="padding:10px">
-                      Last Updated on DSC Community:
+                      Information fetched on:
                       <span class="badge badge-secondary">{{ .AdditionalMetadata.updated | dateFormat "2006-01-23" }}</span>
                       <br />
                   </div>
