--- a/layouts/resources/list.html
+++ b/layouts/resources/list.html
@@ -94,12 +94,12 @@
                   </div>
                   <div style="padding:10px">
                     <strong>Published:</strong>
-                    <span class="badge badge-success">{{ .PublishedDate | dateFormat "2006-01-23" }}</span>
+                    <span class="badge badge-success">{{ .PublishedDate | dateFormat "2006-01-02 15:04" }}</span>
                     <br />
                   </div>
                   <div style="padding:10px">
                       Information fetched on:
-                      <span class="badge badge-secondary">{{ .AdditionalMetadata.updated | dateFormat "2006-01-23" }}</span>
+                      <span class="badge badge-secondary">{{ .AdditionalMetadata.updated | dateFormat "2006-01-02 15:04" }}</span>
                       <br />
                   </div>
                   <a class="btn btn-primary btn-sm rounded p-2 m-2 btn-github" href="{{ .ProjectUri }}" target="_blank" role="button"><i class="fab fa-github-square"></i>Open Project</a>
