--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>{{ .Title }}</title>
 
-  {{ .Hugo.Generator }}
+  {{ .Site.Hugo.Generator }}
 
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1">
